Bugfix - In IE 6, the iframe layer had a great z-index than the actual calendar, so would obstruct it from view (#2683)

--- a/date_input.css
+++ b/date_input.css
@@ -20,7 +20,7 @@
 }
 .date_selector_ieframe {
   position: absolute;
-  z-index: 999999;
+  z-index: 99999;
   display: none;
 }
   .date_selector .month_nav {
